--- a/opmaak.css
+++ b/opmaak.css
@@ -1,1 +1,29 @@
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #222;  /* de achtegrond kleur van de balk wordt hierdoor zwart*/
+  }
+  
+  li {
+    float: left; /* Dit zorgt ervoor dat de balk aan de linker kan van het scherm staat*/
+  }
+  
+  li a {
+    display: block;
+    color: rgb(141, 227, 236); /* de tekst kleur is hierdoor blauw geworden*/
+    text-align: center;
+    padding: 14px 16px; /* dit zorgt voor de grootte van de balk*/ 
+    text-decoration: none;
+  }
+  
+  li a:hover:not(.active) {
+    background-color: rgb(0, 0, 0);
+  }
+  
+  .active {
+    background-color: #121212;
+  }
+  
 
